--- a/home.html
+++ b/home.html
@@ -9,7 +9,6 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <link href="style.scss" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -168,23 +167,40 @@
         <!-- --------------- FOOTER ---------------- -->
 
         <footer>
+            <h2 class="h2">Contact Us</h2>
+
             <div class="container">
                 <div class="container text-center">
                     <div class="row">
                       <div class="col">
-                            <h2 class="h2">Contact Us</h2>
-
+                            
                             <div class="container text-center">
-                                <div class="row row-cols-2">
+                                <div class="row row-cols-4">
                                     <div class="col">
-                                        <a class="nav-link" href="#" target="_self"><i class="fa-brands fa-facebook"></i><p class="social-link">Follow us on Facebook</p> </a>
-                                        <a class="nav-link" href="#" target="_self"><i class="fa-brands fa-youtube"></i><p class="social-link">Subscribe to our Youtube Channel</p></a>
+                                        <a class="nav-link" href="#" target="_self"><i class="fa-brands fa-facebook"></i></a>
                                     </div>
-
                                     <div class="col">
-                                        <a class="nav-link" href="#" target="_self"><i class="fa-brands fa-instagram"></i><p class="social-link">Follow us on Instagram</p></a>
-                                        <a class="nav-link" href="#" target="_self"><i class="fa-brands fa-twitter"></i><p class="social-link">Follow us on Twitter</p></a>
+                                        <a class="nav-link" href="#" target="_self"><i class="fa-brands fa-youtube"></i></a>
                                     </div>
+                                    <div class="col">
+                                        <a class="nav-link" href="#" target="_self"><i class="fa-brands fa-instagram"></i></a>
+                                    </div>
+                                    <div class="col">
+                                        <a class="nav-link" href="#" target="_self"><i class="fa-brands fa-twitter"></i></a>
+                                    </div>
+                                </div>
+                                <div class="col col2">
+                                    <h2 class="head-newsletter">Newsletter</h2>
+                                    <p class="newsletter">Get the latest news and promotions from Alampat ni Cath. Subscribe to our Newsletter.</p>
+                                    <form class="row gy-2 gx-3 align-items-center form">
+                                            <div class="col-auto">
+                                                <label class="visually-hidden" for="autoSizingInput">Email</label>
+                                                <input type="text" class="form-control input2" id="autoSizingInput" placeholder="Email">
+                                            </div>
+                                            <div class="col-auto">
+                                                <button type="submit" class="btn4 btn-primary">Subscribe</button>
+                                            </div>
+                                    </form>
                                 </div>
                             </div>
                       </div>
