--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <link href="style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,6 +18,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Caprasimo&family=Caveat:wght@700&family=Concert+One&family=Fredericka+the+Great&family=Handlee&family=Julee&family=Lobster&family=Noto+Sans+KR:wght@100&family=Patrick+Hand&family=Press+Start+2P&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Caprasimo&family=Caveat:wght@700&family=Concert+One&family=Fredericka+the+Great&family=Handlee&family=Julee&family=Lobster&family=Noto+Sans+KR:wght@100&family=Patrick+Hand&family=Press+Start+2P&family=Shadows+Into+Light&display=swap" rel="stylesheet">
 
 </head>
 <body>
@@ -30,11 +34,6 @@
         <nav class="navbar navbar-light sticky-top">
             <div class="container-fluid">
                 <img src="images/logo.png" alt="Image" width="130px" id="img1">
-
-                <form class="d-flex mt-1" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" id="input1">
-                    <button class="btn" type="submit">Search</button>
-                </form>
 
                 <ul class="nav justify-content-center">
                     <li class="nav-item">
@@ -141,15 +140,15 @@
 
         <div class="container-fluid" id="container">
             <div class="container text-center">
-                <div class="row">
+                <div class="row1">
                     <div class="col">
-                        <h2>Welcome to "Alampat ni Cath" Visual Arts Shop, where creativity finds its canvas!</h2>
+                        <h2 class="intro" id="intro">Welcome to "Alampat ni Cath" Visual Arts Shop, where creativity finds its canvas!</h2>
                         <p class="intro">
                             Immerse yourself in the world of Catherine, a local artist from the Philippines, and explore a diverse range of visual artworks. From vibrant acrylic paintings to intricate charcoal drawings, each piece is a testament to Catherine's artistic journey. Don't miss our special promotions - a chance to bring home a piece of art that speaks to your soul. Let the colors and strokes enchant you as you embark on an artistic adventure with us!
                         </p>
-                        <a href="sign-up.html" target="_self"><button class="btn3" type="submit">Sign up</button></a>
+                        <a href="sign-up.html" target="_self"><button class="btn3" type="submit" id="btn-sign-up">Sign up</button></a>
                         <div class="container text-left " id="grid">
-                            <div class="row">
+                            <div class="row" id="clients">
                                 <div class="col"><span>100+</span> <br> Clients</div>
                                 <div class="col"><span>150+</span> <br> Projects</div>
                                 <div class="col"><span>50+</span> <br> Partners</div>
@@ -320,7 +319,7 @@
                                 <div class="col">
                                     <h2 class="head-newsletter">Newsletter</h2>
                                     <p class="newsletter">Get the latest news and promotions from Alampat ni Cath. Subscribe to our Newsletter.</p>
-                                    <form class="row gy-2 gx-3 align-items-center form">
+                                    <form class="row gy-1 gx-2 align-items-center form">
                                             <div class="col-auto">
                                                 <label class="visually-hidden" for="autoSizingInput">Email</label>
                                                 <input type="text" class="form-control input2" id="autoSizingInput" placeholder="Email">
