--- a/about.html
+++ b/about.html
@@ -285,8 +285,8 @@
                                     <p class="newsletter">Get the latest news and promotions from Alampat ni Cath. Subscribe to our Newsletter.</p>
                                     <form class="row gy-1 gx-2 align-items-center form">
                                             <div class="col-auto">
-                                                <label class="visually-hidden" for="autoSizingInput">Email</label>
-                                                <input type="text" class="form-control input2" id="autoSizingInput" placeholder="Email">
+                                                <label class="visually-hidden" for="autoSizingInput" required>Email</label>
+                                                <input type="text" class="form-control input2" id="autoSizingInput" placeholder="Email" required>
                                             </div>
                                             <div class="col-auto">
                                                 <button type="submit" class="btn4 btn-primary">Subscribe</button>
