--- a/shop.html
+++ b/shop.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <link href="css/style-about.css" rel="stylesheet">
+    <link href="css/style-shop.css" rel="stylesheet">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,7 +18,7 @@
 </head>
 <body>
     
-<!-- -------------- HOME PAGE ------------------------- -->
+    <!-- -------------- HOME PAGE ------------------------- -->
 
     <div class="container-fluid">
         <nav class="navbar navbar-light sticky-top">
@@ -27,7 +27,9 @@
 
                 <ul class="nav justify-content-center">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="sign-up.html" target="_self"><i class="fa-solid fa-user" id="icn1"></i></a>
+                        <span >
+                            <a class="nav-link" aria-current="page" href="sign-up.html" target="_self"><i class="fa-solid fa-user" id="icn1"></i></a>
+                        </span>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="shop.html" target="_self"><i class="fa-solid fa-store" id="icn1"></i></a>
@@ -49,7 +51,7 @@
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                             <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="home.html" target="_self">Home</a>
+                                <a class="nav-link" aria-current="page" href="index.html" target="_self">Home</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="about.html" target="_self">About</a>
@@ -92,13 +94,236 @@
                 </div>   
             </div>
         </nav>
+    </div>
 
 <!-- --------------------About Page -------------------------- -->
-        
+  
+        <nav class="navbar2 navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="fa-solid fa-bars-staggered"></i>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item">Categories</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="#">Charcoal Painting</a></li>
+                            <li><a class="dropdown-item" href="#">Color Pencil Drawings</a></li>
+                            <li><a class="dropdown-item" href="#">Pencil Drawings</a></li>
+                            <li><a class="dropdown-item" href="#">Acrylic Paintings</a></li>
+                            <li><a class="dropdown-item" href="#">Oil Paintings</a></li>
+                            <li><a class="dropdown-item" href="#">Digital Arts</a></li>
+                        </ul>
+                    </li>
+                    <form class="d-flex" role="search">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-success" type="submit">Search</button>
+                    </form>
+                </div>
+            </div>
+        </nav>
+        <div class="body">
+            <div class="row row-cols-1 row-cols-md-6 g-1">
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="images/A.svg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Customized Charcoal Portrait</h5>
+                            <p class="card-text2">Charcoal Portrait Painting on Vellum</p>
+                            <p class="card-text"><i class="fa-solid fa-peso-sign"></i>5,000.00</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="images/B.svg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Charcoal on Vellum</h5>
+                            <p class="card-text2">Charcoal Portrait Painting on Vellum</p>
+                            <p class="card-text"><i class="fa-solid fa-peso-sign"></i>5,000.00</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="images/C.svg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Color Pencil on Special Paper</h5>
+                            <p class="card-text2">Charcoal Portrait Painting on Vellum</p>
+                            <p class="card-text"><i class="fa-solid fa-peso-sign"></i>6,000.00</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="images/D.svg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text2">Charcoal Portrait Painting on Vellum</p>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        </div>
+                  </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="images/E.svg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text2">Charcoal Portrait Painting on Vellum</p>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        </div>
+                  </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="images/F.svg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text2">Charcoal Portrait Painting on Vellum</p>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        </div>
+                  </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="images/G.svg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text2">Charcoal Portrait Painting on Vellum</p>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        </div>
+                  </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="images/H.svg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text2">Charcoal Portrait Painting on Vellum</p>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        </div>
+                  </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="images/I.svg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text2">Charcoal Portrait Painting on Vellum</p>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        </div>
+                  </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="images/J.svg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text2">Charcoal Portrait Painting on Vellum</p>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        </div>
+                  </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="images/L.svg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text2">Charcoal Portrait Painting on Vellum</p>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        </div>
+                  </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="images/M.svg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text2">Charcoal Portrait Painting on Vellum</p>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        </div>
+                  </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="images/N.svg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text2">Charcoal Portrait Painting on Vellum</p>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        </div>
+                  </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="images/O.svg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text2">Charcoal Portrait Painting on Vellum</p>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        </div>
+                  </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="images/Q.svg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text2">Charcoal Portrait Painting on Vellum</p>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        </div>
+                  </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="images/R.svg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text2">Charcoal Portrait Painting on Vellum</p>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        </div>
+                  </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="images/S.svg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text2">Charcoal Portrait Painting on Vellum</p>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        </div>
+                  </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="images/T.svg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text2">Charcoal Portrait Painting on Vellum</p>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        </div>
+                  </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="images/U.svg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text2">Charcoal Portrait Painting on Vellum</p>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        </div>
+                  </div>
+                </div>
+            </div>
+        </div>
 
 
 <!-- ---------------------- FOOTER ------------------------ -->
-
+    <div>
         <footer>
             <h2 class="h2">Contact Us</h2>
 
@@ -124,7 +349,7 @@
                                 <div class="col">
                                     <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                                         <li class="nav-item2">
-                                            <a class="nav-link footer-links" href="home.html" target="_self">Home</a>
+                                            <a class="nav-link footer-links" href="index.html" target="_self">Home</a>
                                         </li>
                                         <li class="nav-item2">
                                             <a class="nav-link footer-links" href="about.html" target="_self">About</a>
@@ -190,7 +415,7 @@
                                     <form class="row gy-1 gx-2 align-items-center form">
                                             <div class="col-auto">
                                                 <label class="visually-hidden" for="autoSizingInput">Email</label>
-                                                <input type="text" class="form-control input2" id="autoSizingInput" placeholder="Email">
+                                                <input type="text" class="form-control input2" id="autoSizingInput" placeholder="Email" required>
                                             </div>
                                             <div class="col-auto">
                                                 <button type="submit" class="btn4 btn-primary">Subscribe</button>
@@ -209,8 +434,8 @@
         </footer>
 
 
-
     </div>
+
 
    
 
