--- a/sign-up.html
+++ b/sign-up.html
@@ -50,7 +50,7 @@
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                             <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="home.html" target="_self">Home</a>
+                                <a class="nav-link" aria-current="page" href="index.html" target="_self">Home</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="about.html" target="_self">About</a>
@@ -178,7 +178,7 @@
                                 <div class="col">
                                     <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                                         <li class="nav-item2">
-                                            <a class="nav-link footer-links" href="home.html" target="_self">Home</a>
+                                            <a class="nav-link footer-links" href="index.html" target="_self">Home</a>
                                         </li>
                                         <li class="nav-item2">
                                             <a class="nav-link footer-links" href="about.html" target="_self">About</a>
@@ -243,8 +243,8 @@
                                     <p class="newsletter">Get the latest news and promotions from Alampat ni Cath. Subscribe to our Newsletter.</p>
                                     <form class="row gy-1 gx-2 align-items-center form">
                                             <div class="col-auto">
-                                                <label class="visually-hidden" for="autoSizingInput">Email</label>
-                                                <input type="text" class="form-control input2" id="autoSizingInput" placeholder="Email">
+                                                <label class="visually-hidden" for="autoSizingInput" required>Email</label>
+                                                <input type="text" class="form-control input2" id="autoSizingInput" placeholder="Email" required>
                                             </div>
                                             <div class="col-auto">
                                                 <button type="submit" class="btn4 btn-primary">Subscribe</button>
