--- a/shop.html
+++ b/shop.html
@@ -9,15 +9,17 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <link href="css/style-shop.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Caprasimo&family=Caveat:wght@700&family=Concert+One&family=Fredericka+the+Great&family=Handlee&family=Julee&family=Lobster&family=Noto+Sans+KR:wght@100&family=Patrick+Hand&family=Press+Start+2P&family=Quicksand:wght@300&family=Shadows+Into+Light&display=swap" rel="stylesheet">
 
+   
+
 </head>
 <body>
-    
+
     <!-- -------------- HOME PAGE ------------------------- -->
 
     <div class="container-fluid">
@@ -94,236 +96,83 @@
                 </div>   
             </div>
         </nav>
-    </div>
 
-<!-- --------------------About Page -------------------------- -->
-  
-        <nav class="navbar2 navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            <i class="fa-solid fa-bars-staggered"></i>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item">Categories</a></li>
-                            <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="#">Charcoal Painting</a></li>
-                            <li><a class="dropdown-item" href="#">Color Pencil Drawings</a></li>
-                            <li><a class="dropdown-item" href="#">Pencil Drawings</a></li>
-                            <li><a class="dropdown-item" href="#">Acrylic Paintings</a></li>
-                            <li><a class="dropdown-item" href="#">Oil Paintings</a></li>
-                            <li><a class="dropdown-item" href="#">Digital Arts</a></li>
-                        </ul>
-                    </li>
-                    <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
-                    </form>
-                </div>
+        <div>
+            
+        </div>
+
+        <div class="container-fluid featured">
+
+            <div class="testimonial">
+                <h4>Featured Artworks</h4>
             </div>
-        </nav>
-        <div class="body">
-            <div class="row row-cols-1 row-cols-md-6 g-1">
+
+            <div class="row row-cols-.5 row-cols-md-6 g-1">
                 <div class="col">
                     <div class="card h-100">
-                        <img src="images/A.svg" class="card-img-top" alt="...">
+                        <img src="images/7.svg" class="card-img-top" alt="Image">
                         <div class="card-body">
-                            <h5 class="card-title">Customized Charcoal Portrait</h5>
-                            <p class="card-text2">Charcoal Portrait Painting on Vellum</p>
-                            <p class="card-text"><i class="fa-solid fa-peso-sign"></i>5,000.00</p>
+                            <h5 class="card-title">Kim Samuel Portrait</h5>
+                            <p class="card-text">This is a customize Color Pencil Portrait Drawing</p>
                         </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card h-100">
-                        <img src="images/B.svg" class="card-img-top" alt="...">
+                        <img src="images/8.svg" class="card-img-top" alt="Images">
                         <div class="card-body">
-                            <h5 class="card-title">Charcoal on Vellum</h5>
-                            <p class="card-text2">Charcoal Portrait Painting on Vellum</p>
-                            <p class="card-text"><i class="fa-solid fa-peso-sign"></i>5,000.00</p>
+                            <h5 class="card-title">My Portrait</h5>
+                            <p class="card-text">This is a customize Charcoal Portrait Drawing</p>
                         </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card h-100">
-                        <img src="images/C.svg" class="card-img-top" alt="...">
+                        <img src="images/9.svg" class="card-img-top" alt="Images">
                         <div class="card-body">
-                            <h5 class="card-title">Color Pencil on Special Paper</h5>
-                            <p class="card-text2">Charcoal Portrait Painting on Vellum</p>
-                            <p class="card-text"><i class="fa-solid fa-peso-sign"></i>6,000.00</p>
+                            <h5 class="card-title">Liza Soberano Portrait</h5>
+                            <p class="card-text">This is a Portrait of Liza Soberano using Charcoal on Vellum as medium.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card h-100">
-                        <img src="images/D.svg" class="card-img-top" alt="...">
+                        <img src="images/10.svg" class="card-img-top" alt="Images">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text2">Charcoal Portrait Painting on Vellum</p>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <h5 class="card-title">Jesus Christ</h5>
+                            <p class="card-text">This is a Charcoal Portrait Painting of Jesus Christ.</p>
                         </div>
-                  </div>
+                    </div>
                 </div>
                 <div class="col">
                     <div class="card h-100">
-                        <img src="images/E.svg" class="card-img-top" alt="...">
+                        <img src="images/11.svg" class="card-img-top" alt="Images">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text2">Charcoal Portrait Painting on Vellum</p>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <h5 class="card-title">Max the Husky</h5>
+                            <p class="card-text">This is a commission customized Charcoal Painting of a collector.</p>
                         </div>
-                  </div>
+                    </div>
                 </div>
                 <div class="col">
                     <div class="card h-100">
-                        <img src="images/F.svg" class="card-img-top" alt="...">
+                        <img src="images/12.svg" class="card-img-top" alt="Images">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text2">Charcoal Portrait Painting on Vellum</p>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <h5 class="card-title">Baby Althius</h5>
+                            <p class="card-text">A commissioned portrait charcoal painting of my collector's baby.</p>
                         </div>
-                  </div>
-                </div>
-                <div class="col">
-                    <div class="card h-100">
-                        <img src="images/G.svg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text2">Charcoal Portrait Painting on Vellum</p>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                        </div>
-                  </div>
-                </div>
-                <div class="col">
-                    <div class="card h-100">
-                        <img src="images/H.svg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text2">Charcoal Portrait Painting on Vellum</p>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                        </div>
-                  </div>
-                </div>
-                <div class="col">
-                    <div class="card h-100">
-                        <img src="images/I.svg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text2">Charcoal Portrait Painting on Vellum</p>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                        </div>
-                  </div>
-                </div>
-                <div class="col">
-                    <div class="card h-100">
-                        <img src="images/J.svg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text2">Charcoal Portrait Painting on Vellum</p>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                        </div>
-                  </div>
-                </div>
-                <div class="col">
-                    <div class="card h-100">
-                        <img src="images/L.svg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text2">Charcoal Portrait Painting on Vellum</p>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                        </div>
-                  </div>
-                </div>
-                <div class="col">
-                    <div class="card h-100">
-                        <img src="images/M.svg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text2">Charcoal Portrait Painting on Vellum</p>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                        </div>
-                  </div>
-                </div>
-                <div class="col">
-                    <div class="card h-100">
-                        <img src="images/N.svg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text2">Charcoal Portrait Painting on Vellum</p>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                        </div>
-                  </div>
-                </div>
-                <div class="col">
-                    <div class="card h-100">
-                        <img src="images/O.svg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text2">Charcoal Portrait Painting on Vellum</p>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                        </div>
-                  </div>
-                </div>
-                <div class="col">
-                    <div class="card h-100">
-                        <img src="images/Q.svg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text2">Charcoal Portrait Painting on Vellum</p>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                        </div>
-                  </div>
-                </div>
-                <div class="col">
-                    <div class="card h-100">
-                        <img src="images/R.svg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text2">Charcoal Portrait Painting on Vellum</p>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                        </div>
-                  </div>
-                </div>
-                <div class="col">
-                    <div class="card h-100">
-                        <img src="images/S.svg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text2">Charcoal Portrait Painting on Vellum</p>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                        </div>
-                  </div>
-                </div>
-                <div class="col">
-                    <div class="card h-100">
-                        <img src="images/T.svg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text2">Charcoal Portrait Painting on Vellum</p>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                        </div>
-                  </div>
-                </div>
-                <div class="col">
-                    <div class="card h-100">
-                        <img src="images/U.svg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text2">Charcoal Portrait Painting on Vellum</p>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                        </div>
-                  </div>
-                </div>
+                    </div>
+                </div>      
+            </div>
+
+            <div class="testimonial-view-all">
+                <a href="shop.html" target="_self" class="btn btn3">View All</a>
             </div>
         </div>
 
 
-<!-- ---------------------- FOOTER ------------------------ -->
-    <div>
+
+        <!-- --------------- FOOTER ---------------- -->
+
         <footer>
             <h2 class="h2">Contact Us</h2>
 
@@ -414,7 +263,7 @@
                                     <p class="newsletter">Get the latest news and promotions from Alampat ni Cath. Subscribe to our Newsletter.</p>
                                     <form class="row gy-1 gx-2 align-items-center form">
                                             <div class="col-auto">
-                                                <label class="visually-hidden" for="autoSizingInput">Email</label>
+                                                <label class="visually-hidden" for="autoSizingInput" required>Email</label>
                                                 <input type="text" class="form-control input2" id="autoSizingInput" placeholder="Email" required>
                                             </div>
                                             <div class="col-auto">
@@ -434,8 +283,8 @@
         </footer>
 
 
-    </div>
 
+    </div>
 
    
 
@@ -445,7 +294,8 @@
 
 
 
-
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
