--- a/sign-up.html
+++ b/sign-up.html
@@ -129,7 +129,7 @@
                     <div class="card2">
                         <div class="card-body2">
                             <form class="row g-1">
-                                <h5 class="card-title2">Register</h5>
+                                <h5 class="card-title2">Sign up</h5>
                                 <div class="col-md-10">
                                     <label for="inputEmail4" class="form-label">Username or Email Address</label>
                                     <input type="email" placeholder="Enter your email" class="form-control" required id="inputEmail5">
@@ -141,7 +141,7 @@
                                         <p> Your personal data will be used to support your experience throughout this website to manage access to your account, and for other purposes described in our <a class="sign-up-pp" href="policies.html" target="_self">Privacy Policy</a></p>
                                     </div>
                                     <div class="col-md-10">
-                                        <button type="submit" class="btn btn5">Register</button>
+                                        <button type="submit" class="btn btn5">Sign up</button>
                                     </div>
                                 </div>
                             </form>
