--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                         <img src="images/7.svg" class="card-img-top" alt="Image">
                         <div class="card-body">
                             <h5 class="card-title">Kim Samuel Portrait</h5>
-                            <p class="card-text">This is a customize Color Pencil Portrait Drawing</p>
+                            <p class="card-text">Php 3,000</p>
                         </div>
                     </div>
                 </div>
@@ -170,7 +170,7 @@
                         <img src="images/8.svg" class="card-img-top" alt="Images">
                         <div class="card-body">
                             <h5 class="card-title">My Portrait</h5>
-                            <p class="card-text">This is a customize Charcoal Portrait Drawing</p>
+                            <p class="card-text">Php 3,000</p>
                         </div>
                     </div>
                 </div>
@@ -178,8 +178,8 @@
                     <div class="card h-100">
                         <img src="images/9.svg" class="card-img-top" alt="Images">
                         <div class="card-body">
-                            <h5 class="card-title">Liza Soberano Portrait</h5>
-                            <p class="card-text">This is a Portrait of Liza Soberano using Charcoal on Vellum as medium.</p>
+                            <h5 class="card-title">Liza Portrait</h5>
+                            <p class="card-text">Php 3,000</p>
                         </div>
                     </div>
                 </div>
@@ -188,7 +188,7 @@
                         <img src="images/10.svg" class="card-img-top" alt="Images">
                         <div class="card-body">
                             <h5 class="card-title">Jesus Christ</h5>
-                            <p class="card-text">This is a Charcoal Portrait Painting of Jesus Christ.</p>
+                            <p class="card-text">Php 3,000</p>
                         </div>
                     </div>
                 </div>
@@ -197,7 +197,7 @@
                         <img src="images/11.svg" class="card-img-top" alt="Images">
                         <div class="card-body">
                             <h5 class="card-title">Max the Husky</h5>
-                            <p class="card-text">This is a commission customized Charcoal Painting of a collector.</p>
+                            <p class="card-text">Php 3,000</p>
                         </div>
                     </div>
                 </div>
@@ -206,14 +206,14 @@
                         <img src="images/12.svg" class="card-img-top" alt="Images">
                         <div class="card-body">
                             <h5 class="card-title">Baby Althius</h5>
-                            <p class="card-text">A commissioned portrait charcoal painting of my collector's baby.</p>
+                            <p class="card-text">Php 3,000</p>
                         </div>
                     </div>
                 </div>      
             </div>
 
             <div class="testimonial-view-all">
-                <a href="shop.html" target="_self" class="btn btn3">View All</a>
+                <a href="shop.html" target="_self" class="btn btn3">View More</a>
             </div>
         </div>
 
