updated today Oct. 5

--- a/about.html
+++ b/about.html
@@ -99,7 +99,7 @@
                 <h3>About "Alampat ni Cath" Visual Arts Shop</h3>
                 <p>Welcome to "Alampat ni Cath" Visual Arts Shop, where creativity and passion come together to create a world of visual wonders. Allow us to introduce you to the artist and the artisitic spirit behind this enchanting realm.</p>
                 <div class="img2">
-                    <img src="images/About1.svg" alt="Image" width="300px" height="250px">
+                    <img src="images/About1.svg" class="img-fluid" alt="Image">
                 </div>
             </div>
             <div class="card">
