--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                             <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="home.html" target="_self">Home</a>
+                                <a class="nav-link" aria-current="page" href="index.html" target="_self">Home</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="about.html" target="_self">About</a>
@@ -220,7 +220,7 @@
                                 <div class="col">
                                     <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                                         <li class="nav-item2">
-                                            <a class="nav-link footer-links" href="home.html" target="_self">Home</a>
+                                            <a class="nav-link footer-links" href="index.html" target="_self">Home</a>
                                         </li>
                                         <li class="nav-item2">
                                             <a class="nav-link footer-links" href="about.html" target="_self">About</a>
