--- a/shop.html
+++ b/shop.html
@@ -107,6 +107,9 @@
         <div class="container-fluid h1">
             <h1 >Experience the magic of Art. Let colors tell your story!</h1>
         </div>
+        <div classs="container-fluid">
+            <p class="para">Welcome to our Shop! Here, you can discover and buy amazing artworks created by Catherine. Take a look around, find something you love, and make it yours. Let's dive into the artful world of "Alampat ni Cath". Happy browsing!</p>
+        </div>
 
         <!-- ------------ categories ------------- -->
 
